[project]
name = "git-ssh-keys-keeper"
version = "0.1.0"
description = ""
authors = [
    {name = "alingse", email = "alingse@foxmail.com"},
]
dependencies = [
    "sshconf>=0.2.4"]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
