[project]
name = "git-ssh-key"
version = "0.1.4"
description = ""
authors = [
    {name = "alingse", email = "alingse@foxmail.com"},
]
dependencies = [
    "sshconf>=0.2.4",
    "click>=7",
    "giturlparse>=0.10.0",
]
requires-python = ">=3.6"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/alingse/git-ssh-key"

[project.scripts]
git-ssh-key = "gitsshkey.main:main"

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
